--- a/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
+++ b/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
@@ -8,7 +8,7 @@ permissions: write-all
 
 jobs:
   cleanup-snapshots:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-cleanup-snapshots.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-cleanup-snapshots.yml@improvement/PFM-ISSUE-13081-Investigate-if-we-can-use-nx-caching-only-for
     secrets:
       JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
