--- a/.github/workflow-templates/fe/fe-pr-snapshot.yml
+++ b/.github/workflow-templates/fe/fe-pr-snapshot.yml
@@ -9,7 +9,7 @@ permissions: write-all
 
 jobs:
   publish-pr-snapshot:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-pr-snapshot.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-pr-snapshot.yml@improvement/PFM-ISSUE-13081-Investigate-if-we-can-use-nx-caching-only-for
     with:
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
     secrets:
