--- a/.github/workflow-templates/fe/fe-tag-pushed.yml
+++ b/.github/workflow-templates/fe/fe-tag-pushed.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   release-version:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-release.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-release.yml@improvement/PFM-ISSUE-13081-Investigate-if-we-can-use-nx-caching-only-for
     secrets:
       JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
