--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -43,7 +43,7 @@ jobs:
         run: npx cypress install
 
       - name: Affected Regression Tests
-        uses: collaborationFactory/github-actions/.github/actions/run-many@master
+        uses: collaborationFactory/github-actions/.github/actions/run-many@improvement/PFM-ISSUE-13081-Investigate-if-we-can-use-nx-caching-only-for
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
