Revert "branch off"
This reverts commit f5663c98d7d61d235fbc989fe881cdc8a293920d.

--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   check-licenses:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@release/23.4
+    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@master
     with:
       FOSS_DIST: dist
       CUSTOM_LICENSES_JSON: custom-licenses/custom-licenses.json
