PFM-ISSUE-25793 fix comment PR GitHub action (#57)
changelog: Frontend-Core: fix comment PR GitHub action [PFM-ISSUE-25793, PR github-actions#57]
(cherry picked from commit 4bc540ecd47a07697091166467d141dbbb8bc8ec)

--- a/.github/workflows/fe-pr-snapshot.yml
+++ b/.github/workflows/fe-pr-snapshot.yml
@@ -55,8 +55,8 @@ jobs:
           PR_NUMBER: ${{ github.event.number }}
 
       - name: comment published Artifacts on PR
-        uses: machine-learning-apps/pr-comment@master
+        uses: thollander/actions-comment-pull-request@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: githubCommentsForPR.txt
+          filePath: githubCommentsForPR.txt
