--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "27.0.2",
+    "@types/jest": "29.5.11",
     "@types/node": "^18.7.23",
-    "jest": "27.2.3",
+    "jest": "29.7.0",
     "luxon": "^3.3.0",
     "prettier": "2.7.1",
-    "ts-jest": "27.0.5",
+    "ts-jest": "29.1.1",
     "typescript": "4.5.5"
+  },
+  "dependencies": {
+    "@slack/web-api": "^6.11.2"
   }
 }
