--- a/.github/actions/upmerge/action.yml
+++ b/.github/actions/upmerge/action.yml
@@ -7,5 +7,7 @@ runs:
       shell: bash
     - run: cd "$GITHUB_ACTION_PATH/../../.." && pwd && npm ci
       shell: bash
+    - run: npm install -g @cplace/cli
+      shell: bash
     - run: npx ts-node "$GITHUB_ACTION_PATH/../../../tools/scripts/upmerge/upmerge.ts"
       shell: bash
