--- a/.github/workflows/fe-check-upmerge.yml
+++ b/.github/workflows/fe-check-upmerge.yml
@@ -7,6 +7,8 @@ on:
         required: true
       GIT_USER_EMAIL:
         required: true
+      GIT_USER:
+        required: true
         
 jobs:
   check-upmerge:
@@ -34,4 +36,5 @@ jobs:
         env:
           SLACK_TOKEN_UPMERGE: ${{ secrets.SLACK_TOKEN_UPMERGE }}
           GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+          GIT_USER: ${{ secrets.GIT_USER }}
           
