--- a/.github/workflow-templates/fe/fe-check-upmerge.yml
+++ b/.github/workflow-templates/fe/fe-check-upmerge.yml
@@ -9,4 +9,7 @@ permissions: write-all
 jobs:
   check-upmerge:
     uses: collaborationFactory/github-actions/.github/workflows/fe-check-upmerge.yml@master
-
+    secrets:
+      SLACK_TOKEN_UPMERGE: ${{ secrets.SLACK_TOKEN_UPMERGE }}
+      GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+      GIT_USER: ${{ secrets.GIT_USER }}
