--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -61,6 +61,7 @@ jobs:
           name: dist-${{ matrix.target }}-${{ matrix.jobIndex }}-e2e-videos
           path: |
             dist/cypress/apps/**/videos/
+          retention-days: 3
 
       - name: Upload A11Y Reports
         uses: actions/upload-artifact@v4
@@ -68,3 +69,4 @@ jobs:
           name: dist-${{ matrix.target }}-${{ matrix.jobIndex }}-a11y-reports
           path: |
             dist/cypress/apps/**/a11y/html/
+          retention-days: 3
