--- a/.github/workflows/fe-pr-close.yml
+++ b/.github/workflows/fe-pr-close.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm ci
 
       - name: Delete Snapshots from NPM Registry
-        uses: collaborationFactory/github-actions/.github/actions/artifacts@feature/PFM-ISSUE-26057-Allow-private-registry-in-Github-Actions-
+        uses: collaborationFactory/github-actions/.github/actions/artifacts@master
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
