--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -34,4 +34,10 @@ jobs:
         run: node_modules/.bin/nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Unit Tests
-        run: node_modules/.bin/nx affected --target=test --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }} --only-failed --jobIndex=${{ matrix.jobIndex }} --jobCount=${{ env.jobCount }} --detectOpenHandles --logHeapUsage --detectLeaks
+        uses: collaborationFactory/github-actions/.github/actions/run-many@master
+        with:
+          target: ${{ matrix.target }}
+          jobIndex: ${{ matrix.jobIndex }}
+          jobCount: ${{ env.jobCount }}
+          base: ${{ inputs.GHA_BASE }}
+          ref: ${{ inputs.GHA_REF }}
