--- a/.github/workflow-templates/fe/fe-pr.yml
+++ b/.github/workflow-templates/fe/fe-pr.yml
@@ -28,7 +28,9 @@ jobs:
   code-quality:
     needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-code-quality.yml@master
-
+    with:
+      GHA_REF: ${{ github.event.pull_request.head.ref }}
+      GHA_BASE: ${{ github.event.pull_request.base.ref }}
   e2e:
     needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
