--- a/.github/workflows/fe-pr-snapshot.yml
+++ b/.github/workflows/fe-pr-snapshot.yml
@@ -47,7 +47,7 @@ jobs:
         run: npm ci
 
       - name: Build and Push to Jfrog NPM Registry
-        uses: collaborationFactory/github-actions/.github/actions/artifacts@fix/PFM-ISSUE-28366-Github-unable-to-publish-only-libs-without
+        uses: collaborationFactory/github-actions/.github/actions/artifacts@master
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
