--- a/.github/workflow-templates/fe/fe-pr.yml
+++ b/.github/workflow-templates/fe/fe-pr.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@release/25.1
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
     secrets:
@@ -20,20 +20,20 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@release/25.1
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
 
   code-quality:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-code-quality.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-code-quality.yml@release/25.1
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
   e2e:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@release/25.1
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
