revert workflow link

--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -34,7 +34,7 @@ jobs:
         run: node_modules/.bin/nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Unit Tests
-        uses: collaborationFactory/github-actions/.github/actions/run-many@fix/PFM-ISSUE-28250-Fix-parallelization-of-e2e-
+        uses: collaborationFactory/github-actions/.github/actions/run-many@fix/master
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
