--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -41,7 +41,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Build and Storybook
-        uses: collaborationFactory/github-actions/.github/actions/run-many@fix/PFM-ISSUE-28250-Fix-parallelization-of-e2e-
+        uses: collaborationFactory/github-actions/.github/actions/run-many@fix/master
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
