--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -40,7 +40,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install Cypress Binary
-        run: CYPRESS_INSTALL_BINARY=0 npm cypress install
+        run: CYPRESS_INSTALL_BINARY=0 npx cypress install
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
