--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -24,6 +24,9 @@ jobs:
     env:
       jobCount: 4
     steps:
+      - name: Set Timezone
+        run: export TZ=UTC
+
       - uses: actions/checkout@v2
         with:
           ref: ${{ inputs.GHA_REF }}
@@ -32,6 +35,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18.18.2
+
       - name: Cache Node Modules
         id: npm-cache
         uses: actions/cache@v2
@@ -39,10 +43,7 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install Cypress Without Binary
-        run: CYPRESS_INSTALL_BINARY=0 npm install cypress --save-dev
-
-      - name: Ensure Cypress Binary Exists
+      - name: Install Cypress
         run: npx cypress install
 
       - name: Setup tmate session
