excluding cypress caching

--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -39,8 +39,11 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+            exclude: '/home/runner/.cache/Cypress'  # Exclude Cypress cache
 
-      - name: Install Cypress Binary
+      - name: Install Cypress
         run: npx cypress install
 
       - name: Setup tmate session
