PFM-ISSUE-29136:excluding cypress caching

--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -38,6 +38,9 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+          exclude: '/home/runner/.cache/Cypress'  # Exclude Cypress cache
 
       - name: Install Cypress Binary
         run: npx cypress install
