--- a/.github/workflows/fe-pr-snapshot.yml
+++ b/.github/workflows/fe-pr-snapshot.yml
@@ -62,3 +62,4 @@ jobs:
         with:
           file-path: githubCommentsForPR.txt
           comment-tag: published-artifacts
+          mode: upsert
