PFM-TASK-5847 branch off release/25.2 version

--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -34,7 +34,7 @@ jobs:
         run: npx nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Unit Tests
-        uses: collaborationFactory/github-actions/.github/actions/run-many@master
+        uses: collaborationFactory/github-actions/.github/actions/run-many@release/25.2
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
