PFM-TASK-6003 Add .venv and Claude AI related files to .gitignore; create reusable GitHub Actions project configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .idea
 **/node_modules
 /githubCommentsForPR.txt
+
+
+# claude ai
+.venv
+.claudeignore
+.claudesync/*.project_id.json
+.claudesync/active_project.json
